--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "next": "latest",
     "react": "latest",
